javascript/ql/test/query-tests/LanguageFeatures/SyntaxError/destructingPrivate.js
class C {
  #privDecl;
  bar() {
    {#privDecl} = this;
  }
}